[metadata]
name = raspi_components
version = 1.0.0
author = Builder212
description = A python package for using certain components on the raspberry pi.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Buidler212/raspi_components
classifiers=[
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
],
packages = find:
python_requires='>=3',
